# NYU_CTF_Bench

./: README.md  TODO.md  challenge_list.tsv  development_dataset.json  export_image.sh  push_image.sh  test_dataset.json
2013/CSAW-Finals/Crypto/stfu/: lfsr.h
2013/CSAW-Finals/Forensics/saidzed/: saidzed.pcap  saidzed.tgz
2013/CSAW-Finals/Pwn/itsy/: README.md  solution.asm
2013/CSAW-Finals/Pwn/kernelchallenge/: Dockerfile  README.md
2013/CSAW-Finals/Pwn/silkstreet/: Makefile  README.md  flag  silkstreet  sploit.rb  street.cpp
2013/CSAW-Finals/Reversing/bad_bios/: bad_bios.tgz  bad_bios_old.tgz
2013/CSAW-Finals/Web/Notes/: Dockerfile
2013/CSAW-Finals/Web/historypeats/: Dockerfile
2013/CSAW-Finals/Web/iSEC Challenge/: README.md
2013/CSAW-Finals/Web/lolcats/: Dockerfile
2013/CSAW-Finals/crypto/stfu/: flag.stfu  stfu  stfu.c
2013/CSAW-Finals/forensics/saidzed/: fragmented.pcap
2013/CSAW-Finals/pwn/itsy/: Dockerfile  key  solution.elf
2013/CSAW-Finals/pwn/kernelchallenge/: flag  solution.c
2013/CSAW-Finals/pwn/silkstreet/: Dockerfile
2013/CSAW-Finals/web/twisted/: Dockerfile
2014/CSAW-Finals/Forensics/aristotle/: capture.sh  notes.txt
2014/CSAW-Finals/Pwn/krakme/: Dockerfile  run.sh  run2.sh
2014/CSAW-Finals/Pwn/mbot/: Dockerfile  key
2014/CSAW-Finals/Pwn/xorcise2/: Dockerfile  config.txt  xorcise
2014/CSAW-Finals/Web/webroot/: Dockerfile
2014/CSAW-Finals/crypto/mountainsound/: Dockerfile  README.md  key
2014/CSAW-Finals/crypto/wieners/: README.md
2014/CSAW-Finals/forensics/aristotle/: aristotle.pcap
2014/CSAW-Finals/misc/pps/: Dockerfile
2014/CSAW-Finals/pwn/mbot/: README.md
2014/CSAW-Finals/pwn/xorcise2/: build.sh  flag  xorcise2.c
2014/CSAW-Finals/reversing/odd/: odd  qa.txt
2017/CSAW-Finals/crypto/ECXOR/: challenge.json
2017/CSAW-Finals/crypto/Lupin/: challenge.json  docker-compose.yml
2017/CSAW-Finals/forensics/thoroughlyStripped/: challenge.json
2017/CSAW-Finals/pwn/Humm_sCh-t/: challenge.json  docker-compose.yml
2017/CSAW-Finals/rev/48-bit_yeet_lab/: challenge.json  solver.py
2017/CSAW-Finals/rev/rabbithole/: challenge.json
2017/CSAW-Finals/rev/rusty_road/: challenge.json
2017/CSAW-Quals/crypto/almost_xor/: challenge.json  solve.py
2017/CSAW-Quals/crypto/another_xor/: challenge.json
2017/CSAW-Quals/crypto/baby_crypt/: challenge.json
2017/CSAW-Quals/forensics/best_router/: challenge.json  docker-compose.yml
2017/CSAW-Quals/forensics/missed_registration/: challenge.json
2017/CSAW-Quals/misc/cvv/: challenge.json  docker-compose.yml
2017/CSAW-Quals/misc/serial/: challenge.json  docker-compose.yml
2017/CSAW-Quals/pwn/pilot/: challenge.json  docker-compose.yml
2017/CSAW-Quals/pwn/zone/: challenge.json  docker-compose.yml
2017/CSAW-Quals/rev/gopherz/: challenge.json  docker-compose.yml
2017/CSAW-Quals/rev/grumpcheck/: challenge.json  docker-compose.yml
2017/CSAW-Quals/rev/prophecy/: challenge.json
2017/CSAW-Quals/rev/realism/: solver.py
2017/CSAW-Quals/rev/tablez/: solve.py
2017/CSAW-Quals/web/littlequery/: challenge.json  docker-compose.yml
2017/CSAW-Quals/web/notmycupofcoffe/: challenge.json
2017/CSAW-Quals/web/orange/: challenge.json
2017/CSAW-Quals/web/orangev2/: challenge.json
2017/Finals/crypto/ECXOR/: ciphertext
2022/CSAW-Quals/crypto/: LICENSE_original  README.MD  README_MALLEABLE.md  challenge.json  flag.txt  password.txt
2022/CSAW-Quals/forensics/: README.md
2022/CSAW-Quals/misc/: Dockerfile  README.md  package-lock.json  package.json  script.py
2023/CSAW-Finals/crypto/nervcenter/: .gitignore  CMakeLists.txt  NOTES.md  README.md  challenge.json
2023/CSAW-Finals/crypto/nervcenter/.github/workflows/: build.yaml
2023/CSAW-Finals/crypto/nervcenter/fuzzers/: decrypt_message_fuzzer.cc  dump_pubkey_ssh_fuzzer.cc  validate_challenge_fuzzer.cc
2023/CSAW-Finals/crypto/nervcenter/img/: asuka_pathetic.txt  magi1.txt  magi2.txt  misato.txt  nerv_wide.txt  ritsuko.txt
2023/CSAW-Finals/crypto/nervcenter/img/angels/: Adam.txt  Arael.txt  Bardiel.txt  Gaghiel.txt  Ireul.txt  Israfel.txt  Matarael.txt  Ramiel.txt  Sahaquiel.txt  Sandalphon.txt  Tabris.txt
2023/CSAW-Finals/crypto/nervcenter/include/: base64.h  credits.h  image.h  parsers.h  rsautil.h
2023/CSAW-Finals/crypto/nervcenter/solver/: brent.c  decryptmessage.c  example_success.txt  requirements.txt  solver.py  ssh_pubkey.py
2023/CSAW-Finals/crypto/nervcenter/solver/sage/: factor.sage
2023/CSAW-Finals/crypto/nervcenter/src/: nervcenter.c  parsers.c  resources.c  ui.c  utils.c
2023/CSAW-Finals/crypto/nervcenter/tests/: CMakeLists.txt  test_base64.c  test_conns.py  test_pack.c  test_rsa_setup.c  test_rsa_sig.c  test_ui.c
2023/CSAW-Finals/crypto/nervcenter/ui_template/: magi_ui_redbox.txt
2023/CSAW-Finals/rev/hells_bells/: Cargo.toml  challenge.json
2023/CSAW-Finals/rev/hells_bells/solver/: rotr32_solver.cpp  solver.py
2023/CSAW-Finals/rev/hells_bells/src/: main.rs  stage.rs
2023/CSAW-Finals/rev/hells_bells/src/b64/: README.md  alphabet.rs  encoder.rs
2023/CSAW-Finals/rev/hells_bells/src/shellcodes/: generate_encoded_functions.cpp
2023/CSAW-Finals/rev/hells_bells/src/shellcodes/initial-shellcode/src/: key_check.h  main.cpp
2023/CSAW-Finals/rev/hells_bells/src/shellcodes/injected-shellcode/build_scripts/: extract.py  server.py
2023/CSAW-Finals/rev/hells_bells/src/shellcodes/injected-shellcode/src/: main.cpp  util.h
CA/: ca.key  ca.srl  csaw.io.csr  csaw.io.ext  csaw.io.key  gen_ca_cert.sh  gen_csaw_cert.sh
mitre_attack_mapping/: README.md  generate_mitre_table.py  test_mapping.json
nyuctf/: challenge.py
nyuctf/test/: test_challenges.py
python/: pyproject.toml  setup.py
python/nyuctf/: __main__.py  challenge.py  dataset.py  download.py  utils.py
python/tests/: test_challenges.py
scripts/: pack_challenge.sh  push_image.sh  remove_image.sh  statistics.py
test/2021/CSAW-Finals/crypto/iBad/: Cargo.toml  challenge.json  make_dist.sh
test/2021/CSAW-Finals/crypto/iBad/static/css/: main.css
test/2021/CSAW-Finals/crypto/iBad/templates/: index.html.tera  profile.html.tera
(+4227 files in other folders)
