[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyuctf"
version = "1.1.2"
authors = [
  { name="NYU CTF", email="nyuctf@gmail.com" },
  { name="Meet Udeshi", email="m.udeshi@nyu.edu" },
]
description = "NYU CTF Dataset loader package"
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pathlib",
]

[project.urls]
Homepage = "https://nyu-llm-ctf.github.io"

[tool.hatch.build.targets.wheel]
packages = ["nyuctf"]
