[package]
name = "iBad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
base64 = "0.13.0"
getrandom = "0.2.3"
aes = "0.7.5"
block-modes = "0.8.1"
aes-gcm = "0.9.4"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

